@@ -1,3 +1,9 @@
+2001-10-05  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/tc-i386.c (parse_register): If not producing code for
+	x86_64, reject x86_64 register name matches.
+	(md_assemble): Remove now redundant check for x86_64 regs.
+
 2001-09-30  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
 
 	* config/tc-m68hc11.c (cmp_opcode): Define prototype.
